--- a/Envision_Python.ipynb
+++ b/Envision_Python.ipynb
@@ -2,13 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nupur': {'password': 'Password1', 'password_hash': 'xxyyyyxxx'},\n",
+       " 'shivi': {'password': 'Password2', 'password_hash': 'xxyyxxxx'},\n",
+       " 'shweta': {'password': 'Password3', 'password_hash': None}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#users_password_info_dict : dictionary of dictionaries, every dictionary will have 2 attribures-> password, password_hash\n",
     "#username would be the key of the dictionary\n",
-    "# from hashlib import sha256\n",
     "import hashlib\n",
     "\n",
     "users_password_info_dict ={\n",
@@ -21,63 +33,9 @@
     "    'shweta':{\n",
     "        'password': 'Password3',\n",
     "        'password_hash': None}\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The hexadecimal equivalent of SHA256 is : \n",
-      "19513fdc9da4fb72a4a05eb66917548d3c90ff94d5419e1f2363eea89dfee1dd\n",
-      "\r\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Wrong Password'"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "_login('nupur', 'Password1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _login(username, password):\n",
-    "\n",
-    "    user_data =  _check_user_existance(username)\n",
-    "    if user_data is None:\n",
-    "        return \"User doesn't exist!\"\n",
-    "    else:\n",
-    "        #check hash column\n",
-    "        hash_password = _convert_to_hash(password)\n",
-    "\n",
-    "        hash_value, stored_password = _check_hash_column(user_data)\n",
-    "                \n",
-    "        if hash_value is None and stored_password == password:\n",
-    "            _update_hash_column(username, hash_password)\n",
-    "            return 'Login Success'\n",
-    "\n",
-    "        if hash_value == hash_password:\n",
-    "            return 'Login Success'\n",
-    "        else:\n",
-    "            return 'Wrong Password'"
+    "}\n",
+    "# users_password_info_dict['nupur']['password'] = 'sharath'\n",
+    "users_password_info_dict"
    ]
   },
   {
@@ -86,41 +44,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _check_user_existance(username):\n",
+    "def _login(username, password):\n",
+    "\n",
+    "    user_data =  _check_user_existence(username)\n",
+    "    if user_data is None:\n",
+    "        return \"User doesn't exist!\"\n",
+    "    else:\n",
+    "        #convert incoming password string to hash\n",
+    "        new_hash_password = _convert_to_hash(password)\n",
+    "        #check hash column\n",
+    "        stored_hash_password, stored_str_password = _check_hash_column(user_data)\n",
+    "        \n",
+    "        if stored_str_password == password or stored_hash_password == None:\n",
+    "                users_password_info_dict[username]['password_hash'] = new_hash_password\n",
+    "                return 'Login Success'\n",
+    "        else:\n",
+    "            return 'Wrong Password'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _check_user_existence(username):\n",
+    "    # get password and hashed password for the specific user\n",
     "    user_data = users_password_info_dict.get(username)\n",
     "    return user_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def _convert_to_hash(password):\n",
-    "    str = password\n",
-    "    result = hashlib.sha256(str.encode()) \n",
+    "    result = hashlib.sha256(password.encode()) \n",
     "    # printing the equivalent hexadecimal value. \n",
-    "    print(\"The hexadecimal equivalent of SHA256 is : \") \n",
-    "    print(result.hexdigest()) \n",
+    "    # print(\"The hexadecimal equivalent of SHA256 is : \") \n",
+    "    # print(result.hexdigest()) \n",
+    "    return result.hexdigest()\n",
     "\n",
     "    print (\"\\r\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def _check_hash_column(user_data):\n",
     "    password = user_data.get('password')\n",
     "    hash_password = user_data.get('password_hash')\n",
-    "\n",
-    "    return hash_password, password\n",
-    "\n",
-    "def _update_hash_column(username, hash_password):    \n",
-    "    users_password_info_dict[username]['password_hash'] = hash_password"
+    "    return hash_password, password"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Login Success'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_login('shivi', 'Password2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nupur': {'password': 'Password1', 'password_hash': 'xxyyyyxxx'},\n",
+       " 'shivi': {'password': 'Password2',\n",
+       "  'password_hash': '1be0222750aaf3889ab95b5d593ba12e4ff1046474702d6b4779f4b527305b23'},\n",
+       " 'shweta': {'password': 'Password3', 'password_hash': None}}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users_password_info_dict"
    ]
   },
   {
